--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@clerk/nextjs": "^6.15.1",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^5.0.1",
+    "@langchain/community": "^0.3.41",
+    "@langchain/core": "^0.3.48",
+    "@langchain/openai": "^0.5.7",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
